--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ connexion==2.14.2
 Flask==2.2.5
 flask-marshmallow==0.15.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==20.0.4
 idna==3.4
 inflection==0.5.1
 itsdangerous==2.1.2
